Fix fiilter modal on mobile

--- a/src/routes/Dashboard/components/Filter/index.module.scss
+++ b/src/routes/Dashboard/components/Filter/index.module.scss
@@ -10,7 +10,7 @@
     border: 1px solid rgba(84, 95, 125, 0.14);
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
     border-radius: 4px;
-
+    z-index: 2;
     .form--fields {
         label {
             font-family: "Work Sans";
@@ -52,5 +52,11 @@
         display: flex;
         flex-direction: row-reverse;
         gap: 14px;
+    }
+}
+
+@media screen and (min-width: 375px) and (max-width: 600px) {
+    .filter--container {
+        top: 80px;
     }
 }
